[gd_scene load_steps=10 format=2]

[ext_resource path="res://ARCADE_N.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.5
margin_top = 50.0
margin_right = 175.5
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterName" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="EnterName"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 120.0
margin_right = 20.0
margin_bottom = 141.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTextBox" type="LineEdit" parent="EnterName"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -49.5
margin_right = 270.0
margin_bottom = 49.5
hint_tooltip = "Enter Name"
custom_fonts/font = SubResource( 3 )
placeholder_text = "Enter Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterNameButton" type="Button" parent="EnterName"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.25
margin_top = 80.0
margin_right = 114.25
margin_bottom = 150.0
custom_fonts/font = SubResource( 4 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorText" type="Label" parent="EnterName"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = 171.0
margin_right = 430.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Your name must be at least 1 character
long and may not contain * or /"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscores" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Label" parent="Highscores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -10.5
margin_right = 100.0
margin_bottom = 10.5
custom_fonts/font = SubResource( 6 )
text = "Loading..."

[node name="Online" type="ScrollContainer" parent="Highscores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -364.0
margin_top = -245.0
margin_right = 365.0
margin_bottom = 371.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="VBoxContainer" parent="Highscores/Online"]

[node name="MenuButton" type="Button" parent="Highscores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = 400.0
margin_right = 102.0
margin_bottom = 11.5
custom_fonts/font = SubResource( 7 )
text = "Back to Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="EnterName/EnterNameButton" to="." method="_on_EnterNameButton_pressed"]
[connection signal="pressed" from="Highscores/MenuButton" to="." method="_on_MenuButton_pressed"]
